my-react-portfolio/src/Components/TechSection/TechSection.module.css
/* default styles for mobile */
.techContainer {
  background-color: #0b24f5;
  color: #ffffff;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.techContainer {
  display: block;
  margin-top: 2em;
}

.leftBox {
  background-color: #0b24f5;
  color: #ffffff;
  text-align: center;
}

.leftBox h1 {
  font-size: 56px;
  padding-top: 1em;
  color: #ffffff;
}

.rightBox {
  background-color: #0b24f5;
  color: #ffffff;
  text-align: left;
  padding: 2.5em 1em 5em 2em;
  font-weight: 800;
}

.rightBox p {
  font-size: 24px;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}

/* Media query for tablet */
@media screen and (min-width: 667px) and (max-width: 1023px) {
  .techContainer {
    background-color: #0b24f5;
    color: #ffffff;
    display: block;
    max-width: 100%;
  }

  .leftBox {
    background-color: #0b24f5;
    color: #ffffff;
    text-align: center;
    padding-right: 4em;
  }

  .leftBox h1 {
    font-size: 56px;
    color: #ffffff;
  }

  .rightBox {
    background-color: #0b24f5;
    color: #ffffff;
    text-align: center;
    font-weight: 800;
  }

  .rightBox p {
    font-size: 24px;
  }
}

/*media query for desktop - 2 rows */
@media (min-width: 1024px) {
  .techContainer {
    grid-template-columns: 45% 55%;
    margin-top: 2em;
    padding: 18em 3em;
  }

  .leftBox {
    background-color: #0b24f5;
    color: #ffffff;
    text-align: right;
    padding-right: 6em;
  }

  .leftBox h1 {
    font-size: 80px;
    color: #ffffff;
  }

  .rightBox {
    background-color: #0b24f5;
    color: #ffffff;
    text-align: left;
    padding-right: 10em;
    font-weight: 800;
  }

  .rightBox p {
    font-size: 32px;
  }
}

